Fix popup vertical-align

--- a/web/portal/src/components/Popup/Preview/style.css
+++ b/web/portal/src/components/Popup/Preview/style.css
@@ -5,8 +5,6 @@
 
 .popup {
     .wrap {
-        margin-left: -468px;
-        margin-top: -308px;
         width: 936px;
         min-height: 616px;
         border-radius: 8px;
